Convert JavaFX desktop app to Spring Boot web application
Major Changes:
- Converted from JavaFX desktop application to Spring Boot web application
- Updated pom.xml with Spring Boot dependencies (web, thymeleaf, test)
- Replaced JavaFX Main.java with Spring Boot application entry point
- Converted MainController from JavaFX to Spring MVC with HTTP endpoints
- Created responsive Thymeleaf HTML templates with Bootstrap 5 styling
- Added index.html for diet selection and diet-plan.html for meal display
- Updated WARP.md with Spring Boot commands and web architecture
- Application now runs on http://localhost:8080 (port 8080)

Features:
- Responsive web design with Bootstrap 5
- Clean card-based UI for diet selection
- Organized meal display by categories (breakfast, lunch, dinner, snacks)
- Nutritional information displayed as colored badges
- Easy navigation between diet types
- Maintains all original business logic and model classes

Ready for deployment on Ubuntu EC2 instance.